--- a/config/move_base/costmap_global_params.yaml
+++ b/config/move_base/costmap_global_params.yaml
@@ -1,15 +1,21 @@
 global_costmap:
 
-    global_frame: map # map
-    robot_base_frame: base_footprint # base_link
+  global_frame: map               # The global frame for the costmap to operate in.
+  robot_base_frame: base          # The name of the frame for the base link of the robot.
+  rolling_window: false           # Whether or not to use a rolling window version of the costmap.
 
-    update_frequency: 10.0
-    publish_frequency: 10.0
-    transform_tolerance: 0.5
+  transform_tolerance: 0.2        # Specifies the delay in transform (tf) data that is tolerable in seconds.
+  update_frequency: 5.0           # The frequency in Hz for the map to be updated.
+  publish_frequency: 5.0         # The frequency in Hz for the map to be publish display information.
+  always_send_full_costmap: true # If true the full costmap is published to "~<name>/costmap" every update. If false only the part of the costmap that has changed is published on the "~<name>/costmap_updates" topic.
 
-    static_map: true
-    rolling_window: true
+  width: 15                       # The width of the map in meters.
+  height: 15                      # The height of the map in meters.
+  resolution: 0.025                # The resolution of the map in meters/cell.
+  origin_x: 0.0                   # The x origin of the map in the global frame in meters.
+  origin_y: 0.0                   # The y origin of the map in the global frame in meters.
 
-    width: 30.0
-    height: 30.0
-    resolution: 0.05
+  plugins: # Sequence of plugin specifications, one per layer. Each specification is a dictionary with name and type fields. The name is used to define the parameter namespace for the plugin.
+      - {name: static_map,       type: "costmap_2d::StaticLayer",    output: "screen"}
+      - {name: obstacles,        type: "costmap_2d::VoxelLayer",     output: "screen"}
+      - {name: inflation_layer,  type: "costmap_2d::InflationLayer", output: "screen"}
