--- a/config/navigation/costmap_common_params.yaml
+++ b/config/navigation/costmap_common_params.yaml
@@ -1,15 +1,9 @@
-footprint: # Specification for the footprint of the robot.
+footprint:
   [ [ 0.27,  0.26],
     [ 0.27, -0.26],
     [-0.27, -0.26],
     [-0.27,  0.26] ]
 footprint_padding: 0.05
-
-# plugins: # Sequence of plugin specifications, one per layer. Each specification is a dictionary with name and type fields. The name is used to define the parameter namespace for the plugin.
-#     - {name: static_map,       type: "costmap_2d::StaticLayer",    output: "screen"}
-#     - {name: obstacles,        type: "costmap_2d::VoxelLayer",     output: "screen"}
-#     - {name: inflation_layer,  type: "costmap_2d::InflationLayer", output: "screen"}
-
 
 # static_layer:
 #   enabled: true
@@ -24,8 +18,7 @@ footprint_padding: 0.05
 
 
 obstacles_layer:
-  # enabled: true
-  # Sensor management parameters #
+  enabled: true
 
   # A list of observation source names separated by spaces.
   observation_sources: laser_scan_front_observation
@@ -81,36 +74,21 @@ obstacles_layer:
   point_cloud_torso_front_observation: {
       topic: kinect_one/depth/points,     # The topic on which sensor data comes in for this source.
       sensor_frame: kinect_one_depth,     # The frame of the origin of the sensor.
-      observation_persistence: 0.0,  # How long to keep each sensor reading in seconds. A value of 0.0 will only keep the most recent reading.
-      expected_update_rate: 0.0,     # How often to expect a reading from a sensor in seconds. A value of 0.0 will allow infinite time between readings.
-      data_type: PointCloud2,        # The data type associated with the topic, right now only "PointCloud", "PointCloud2", and "LaserScan" are supported.
-      clearing: true,                # Whether or not this observation should be used to clear out freespace.
-      marking: true,                 # Whether or not this observation should be used to mark obstacles.
-      max_obstacle_height: 2.0,      # The maximum height in meters of a sensor reading considered valid.
-      min_obstacle_height: 0.035,    # The minimum height in meters of a sensor reading considered valid.
-      obstacle_range: 2.5,           # The maximum range in meters at which to insert obstacles into the costmap using sensor data.
-      raytrace_range: 3.0,           # The maximum range in meters at which to raytrace out obstacles from the map using sensor data.
-      inf_is_valid: false,           # Allows for Inf values in "LaserScan" observation messages. The Inf values are converted to the laser maximum range.
+      observation_persistence: 0.0,       # How long to keep each sensor reading in seconds. A value of 0.0 will only keep the most recent reading.
+      expected_update_rate: 0.0,          # How often to expect a reading from a sensor in seconds. A value of 0.0 will allow infinite time between readings.
+      data_type: PointCloud2,             # The data type associated with the topic, right now only "PointCloud", "PointCloud2", and "LaserScan" are supported.
+      clearing: true,                     # Whether or not this observation should be used to clear out freespace.
+      marking: true,                      # Whether or not this observation should be used to mark obstacles.
+      max_obstacle_height: 2.0,           # The maximum height in meters of a sensor reading considered valid.
+      min_obstacle_height: 0.035,         # The minimum height in meters of a sensor reading considered valid.
+      obstacle_range: 2.5,                # The maximum range in meters at which to insert obstacles into the costmap using sensor data.
+      raytrace_range: 3.0,                # The maximum range in meters at which to raytrace out obstacles from the map using sensor data.
+      inf_is_valid: false,                # Allows for Inf values in "LaserScan" observation messages. The Inf values are converted to the laser maximum range.
   }
 
-  # # ObstacleCostmapPlugin #
-  # track_unknown_space: false # If false, each pixel has one of 2 states: lethal obstacle or free. If true, each pixel has one of 3 states: lethal obstacle, free, or unknown.
-  # footprint_clearing_enabled: true # If true, the robot footprint will clear (mark as free) the space in which it travels.
-  # combination_method: 1 # Changes the behaviour how the obstacle_layer handles incoming data from layers beyond it. Possible values are "Overwrite" (0), "Maximum" (1) and "Nothing" (99).
-
-  # # VoxelCostmapPlugin #
-  # publish_voxel_map: true # Whether or not to publish the underlying voxel grid for visualization purposes.
-  # origin_z: 0.0 # The z origin of the map in meters.
-  # z_resolution: 0.2 # The z resolution of the map in meters/cell.
-  # z_voxels: 10 # The number of voxels to in each vertical column, the height of the grid is z_resolution * z_voxels.
-  # unknown_threshold: 10 # The number of unknown cells allowed in a column considered to be "known"
-  # mark_threshold: 0 # The maximum number of marked cells allowed in a column considered to be "free".
-  # footprint_clearing_enabled: true # If true, the robot footprint will clear (mark as free) the space in which it travels.
-
-
 inflation_layer:
-  # enabled: true
-  inflation_radius: 1.0    # The radius in meters to which the map inflates obstacle cost values.
+  enabled: true             # Whether to apply this plugin or not
+  inflation_radius: 1.0     # The radius in meters to which the map inflates obstacle cost values.
   cost_scaling_factor: 10.0 # A scaling factor to apply to cost values during inflation.
 
 proxemic_layer:
