add layers plugins to launch files

--- a/config/navigation/costmap_local_params.yaml
+++ b/config/navigation/costmap_local_params.yaml
@@ -15,7 +15,7 @@ local_costmap:
   origin_x: 0.0                   # The x origin of the map in the global frame in meters.
   origin_y: 0.0                   # The y origin of the map in the global frame in meters.
 
-  plugins: # Sequence of plugin specifications, one per layer. Each specification is a dictionary with name and type fields. The name is used to define the parameter namespace for the plugin.
-      - {name: obstacles_layer,  type: "costmap_2d::VoxelLayer",                  output: "screen"}
-      - {name: inflation_layer,  type: "costmap_2d::InflationLayer",              output: "screen"}
-      - {name: proxemic_layer,   type: "social_navigation_layers::ProxemicLayer", output: "screen"}
+  # plugins: # Sequence of plugin specifications, one per layer. Each specification is a dictionary with name and type fields. The name is used to define the parameter namespace for the plugin.
+  #     - {name: obstacles_layer,  type: "costmap_2d::VoxelLayer"}
+  #     - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
+  #     - {name: proxemic_layer,   type: "social_navigation_layers::ProxemicLayer"}
